# pdlib

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS  LICENSE  README.md  config.m4  config.w32  pdlib.cc  pdlib.php  php_pdlib.h
src/: chinese_whispers.cc  chinese_whispers.h  cnn_face_detection.cc  cnn_face_detection.h  dnn_face_recognition.cc  dnn_face_recognition.h  face_detection.cc  face_detection.h  face_landmark_detection.cc  face_landmark_detection.h  face_recognition.cc  face_recognition.h  vector.cc  vector.h
tests/: 001.phpt  chinese_whispers_basic.phpt  chinese_whispers_edge_associative_array_error.phpt  chinese_whispers_edge_elements_not_long.phpt  chinese_whispers_edge_not_2_element_error.phpt  chinese_whispers_edge_not_array_error.phpt  chinese_whispers_wrong_arg_type_error.phpt  cnn_face_detection_ctor_error.phpt  cnn_face_detection_ctor_model_not_found_error.phpt  dlib_face_detection.phpt  face_landmark_detection_ctor_error.phpt  face_recognition_ctor_error.phpt  integration_face_recognition.phpt  vector_length.phpt  version.phpt
